--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,12 @@ body {
     margin-top: 50px;
     margin-bottom: 50px;
 }
+#main {
+    display: none;
+}
+.animated {
+    display: block !important;
+}
 .resume {
     background-color: var(--primary);
 }
